apps/comvita-mysupply/route-by-agent/external-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: comvita-supply
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway                    # 1
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /verify-email
    - uri:
        exact: /brand-story
    - uri:
        prefix: /news
    - uri:
        exact: /news-and-events
    - uri:
        prefix: /products
    - uri:
        prefix: /categories
    - uri:
        exact: /global-contacts
    - uri:
        exact: /investors
    - uri:
        prefix: /user
    - uri:
        exact: /retail-stores
    - uri:
        exact: /onsale
    - uri:
        exact: /ecomm
    - uri:
        prefix: /_next
    - uri:
        prefix: /assets
    - uri:
        regex: '^.*\.(ico|png|jpg|webp)$'
    route:
    - destination:
        host: comvita-mysupply.default.svc.cluster.local
        subset: v1
        port:
          number: 80
  - match:
    - headers:
         version:
           exact: v2
      uri:
        exact: /
    - uri:
        exact: /verify-email
    - uri:
        exact: /brand-story
    - uri:
        prefix: /news
    - uri:
        exact: /news-and-events
    - uri:
        prefix: /products
    - uri:
        prefix: /categories
    - uri:
        exact: /global-contacts
    - uri:
        exact: /investors
    - uri:
        prefix: /user
    - uri:
        exact: /retail-stores
    - uri:
        exact: /onsale
    - uri:
        exact: /ecomm
    - uri:
        prefix: /_next
    - uri:
        prefix: /assets
    - uri:
        regex: '^.*\.(ico|png|jpg|webp)$'
    route:
    - destination:
        host: comvita-mysupply.default.svc.cluster.local
        subset: v2
        port:
          number: 80
  - match:
    - uri:
        prefix: /mysupply-adyen
    route:
    - destination:
        host: comvita-mysupply-adyen.default.svc.cluster.local
        port:
          number: 80
